--- a/docling_convert_pipeline_compiled.yaml
+++ b/docling_convert_pipeline_compiled.yaml
@@ -14,6 +14,12 @@
 #    num_splits: int [Default: 3.0]
 #    pdf_base_url: str [Default: 'https://github.com/docling-project/docling/raw/v2.43.0/tests/data/pdf']
 #    pdf_filenames: str [Default: '2203.01017v2.pdf,2206.01062.pdf,2305.03393v1-pg9.pdf,2305.03393v1.pdf,amt_handbook_sample.pdf,code_and_formula.pdf,multi_page.pdf,redp5110_sampled.pdf']
+#    pdf_from_s3: bool [Default: False]
+#    pdf_s3_access_key: str [Default: 'REDACTED']
+#    pdf_s3_bucket: str [Default: 'my-bucket']
+#    pdf_s3_endpoint: str [Default: 'https://s3.us-east-2.amazonaws.com']
+#    pdf_s3_prefix: str [Default: 'my-pdfs']
+#    pdf_s3_secret_key: str [Default: 'REDACTED']
 components:
   comp-create-pdf-splits:
     executorLabel: exec-create-pdf-splits
@@ -49,10 +55,12 @@ components:
       parameters:
         image_export_mode:
           defaultValue: embedded
+          description: Mode to export images.
           isOptional: true
           parameterType: STRING
         num_threads:
           defaultValue: 4.0
+          description: Number of threads to use per document processing.
           isOptional: true
           parameterType: NUMBER_INTEGER
         pdf_backend:
@@ -65,26 +73,32 @@ components:
           parameterType: LIST
         remote_model_api_key:
           defaultValue: ''
+          description: API key or token for the remote model.
           isOptional: true
           parameterType: STRING
         remote_model_enabled:
           defaultValue: false
+          description: Whether or not to use a remote model.
           isOptional: true
           parameterType: BOOLEAN
         remote_model_endpoint_url:
           defaultValue: ''
+          description: URL of the remote model.
           isOptional: true
           parameterType: STRING
         remote_model_name:
           defaultValue: ''
+          description: Name of the remote model.
           isOptional: true
           parameterType: STRING
         table_mode:
           defaultValue: accurate
+          description: Mode to detect tables.
           isOptional: true
           parameterType: STRING
         timeout_per_document:
           defaultValue: 0.0
+          description: Timeout per document processing.
           isOptional: true
           parameterType: NUMBER_INTEGER
     outputDefinitions:
@@ -174,11 +188,41 @@ components:
     executorLabel: exec-import-pdfs
     inputDefinitions:
       parameters:
-        pdf_base_url:
+        base_url:
           description: Base URL of the PDF files.
           parameterType: STRING
-        pdf_filenames:
+        filenames:
           description: List of PDF filenames to import.
+          parameterType: STRING
+        from_s3:
+          defaultValue: false
+          description: Whether or not to import from S3.
+          isOptional: true
+          parameterType: BOOLEAN
+        s3_access_key:
+          defaultValue: ''
+          description: S3 access key of the PDF files.
+          isOptional: true
+          parameterType: STRING
+        s3_bucket:
+          defaultValue: ''
+          description: S3 bucket of the PDF files.
+          isOptional: true
+          parameterType: STRING
+        s3_endpoint:
+          defaultValue: ''
+          description: S3 endpoint of the PDF files.
+          isOptional: true
+          parameterType: STRING
+        s3_prefix:
+          defaultValue: ''
+          description: S3 prefix of the PDF files.
+          isOptional: true
+          parameterType: STRING
+        s3_secret_key:
+          defaultValue: ''
+          description: S3 secret key of the PDF files.
+          isOptional: true
           parameterType: STRING
     outputDefinitions:
       artifacts:
@@ -218,9 +262,10 @@ deploymentSpec:
           \    num_splits: int,\n) -> List[List[str]]:\n    \"\"\"\n    Create a list\
           \ of PDF splits.\n\n    Args:\n        input_path: Path to the input directory\
           \ containing PDF files.\n        num_splits: Number of splits to create.\n\
-          \    \"\"\"\n    from pathlib import Path\n\n    input_path_p = Path(input_path.path)\n\
-          \n    all_pdfs = [path.name for path in input_path_p.glob(\"*.pdf\")]\n\
-          \    return [all_pdfs[i::num_splits] for i in range(num_splits)]\n\n"
+          \    \"\"\"\n    from pathlib import Path # pylint: disable=import-outside-toplevel\
+          \  # noqa: PLC0415, E402\n\n    input_path_p = Path(input_path.path)\n\n\
+          \    all_pdfs = [path.name for path in input_path_p.glob(\"*.pdf\")]\n \
+          \   return [all_pdfs[i::num_splits] for i in range(num_splits)]\n\n"
         image: registry.access.redhat.com/ubi9/python-311:9.6-1755074620
     exec-docling-convert:
       container:
@@ -257,30 +302,36 @@ deploymentSpec:
           \ str = \"\",\n    remote_model_name: str = \"\",\n):\n    \"\"\"\n    Convert\
           \ a list of PDF files to JSON and Markdown using Docling.\n\n    Args:\n\
           \        input_path: Path to the input directory containing PDF files.\n\
-          \        pdf_split: List of PDF file names to process.\n        pdf_backend:\
-          \ Backend to use for PDF processing.\n        artifacts_path: Path to the\
-          \ directory containing Docling models.\n        output_path: Path to the\
-          \ output directory for JSON and Markdown files.\n    \"\"\"\n    import\
-          \ os\n    from importlib import import_module\n    from pathlib import Path\n\
-          \n    from docling_core.types.doc.base import ImageRefMode  # pylint: disable=import-outside-toplevel\
-          \  # noqa: PLC0415, E402\n    from docling.datamodel.base_models import\
-          \ InputFormat  # pylint: disable=import-outside-toplevel  # noqa: PLC0415,\
-          \ E402\n    from docling.datamodel.pipeline_options import (  # pylint:\
-          \ disable=import-outside-toplevel  # noqa: PLC0415, E402\n        PdfPipelineOptions,\n\
-          \        PdfBackend,\n        TableFormerMode,\n        VlmPipelineOptions,\n\
-          \    )\n    from docling.document_converter import DocumentConverter, PdfFormatOption\
+          \        artifacts_path: Path to the directory containing Docling models.\n\
+          \        output_path: Path to the output directory for converted JSON and\
+          \ Markdown files.\n        pdf_split: List of PDF file names to process.\n\
+          \        pdf_backend: Backend to use for PDF processing.\n        image_export_mode:\
+          \ Mode to export images.\n        table_mode: Mode to detect tables.\n \
+          \       num_threads: Number of threads to use per document processing.\n\
+          \        timeout_per_document: Timeout per document processing.\n      \
+          \  remote_model_enabled: Whether or not to use a remote model.\n       \
+          \ remote_model_endpoint_url: URL of the remote model.\n        remote_model_api_key:\
+          \ API key or token for the remote model.\n        remote_model_name: Name\
+          \ of the remote model.\n    \"\"\"\n    import os\n    from importlib import\
+          \ import_module\n    from pathlib import Path\n\n    from docling_core.types.doc.base\
+          \ import ImageRefMode  # pylint: disable=import-outside-toplevel  # noqa:\
+          \ PLC0415, E402\n    from docling.datamodel.base_models import InputFormat\
           \  # pylint: disable=import-outside-toplevel  # noqa: PLC0415, E402\n  \
-          \  from docling.datamodel.accelerator_options import AcceleratorDevice,\
-          \ AcceleratorOptions  # pylint: disable=import-outside-toplevel  # noqa:\
-          \ PLC0415, E402\n    from docling.datamodel.pipeline_options_vlm_model import\
-          \ ApiVlmOptions, ResponseFormat # pylint: disable=import-outside-toplevel\
-          \  # noqa: PLC0415, E402\n    from docling.pipeline.vlm_pipeline import\
-          \ VlmPipeline # pylint: disable=import-outside-toplevel  # noqa: PLC0415,\
-          \ E402\n    from docling.pipeline.standard_pdf_pipeline import StandardPdfPipeline\
-          \ # pylint: disable=import-outside-toplevel  # noqa: PLC0415, E402\n\n \
-          \   allowed_backends = {e.value for e in PdfBackend}\n    if pdf_backend\
-          \ not in allowed_backends:\n        raise ValueError(\n            f\"Invalid\
-          \ pdf_backend: {pdf_backend}. Must be one of {sorted(allowed_backends)}\"\
+          \  from docling.datamodel.pipeline_options import (  # pylint: disable=import-outside-toplevel\
+          \  # noqa: PLC0415, E402\n        PdfPipelineOptions,\n        PdfBackend,\n\
+          \        TableFormerMode,\n        VlmPipelineOptions,\n    )\n    from\
+          \ docling.document_converter import DocumentConverter, PdfFormatOption \
+          \ # pylint: disable=import-outside-toplevel  # noqa: PLC0415, E402\n   \
+          \ from docling.datamodel.accelerator_options import AcceleratorDevice, AcceleratorOptions\
+          \  # pylint: disable=import-outside-toplevel  # noqa: PLC0415, E402\n  \
+          \  from docling.datamodel.pipeline_options_vlm_model import ApiVlmOptions,\
+          \ ResponseFormat # pylint: disable=import-outside-toplevel  # noqa: PLC0415,\
+          \ E402\n    from docling.pipeline.vlm_pipeline import VlmPipeline # pylint:\
+          \ disable=import-outside-toplevel  # noqa: PLC0415, E402\n    from docling.pipeline.standard_pdf_pipeline\
+          \ import StandardPdfPipeline # pylint: disable=import-outside-toplevel \
+          \ # noqa: PLC0415, E402\n\n    allowed_backends = {e.value for e in PdfBackend}\n\
+          \    if pdf_backend not in allowed_backends:\n        raise ValueError(\n\
+          \            f\"Invalid pdf_backend: {pdf_backend}. Must be one of {sorted(allowed_backends)}\"\
           \n        )\n\n    input_path_p = Path(input_path.path)\n    artifacts_path_p\
           \ = Path(artifacts_path.path)\n    output_path_p = Path(output_path.path)\n\
           \    output_path_p.mkdir(parents=True, exist_ok=True)\n\n    input_pdfs\
@@ -293,7 +344,9 @@ deploymentSpec:
           \                parameters=dict(\n                    max_new_tokens=400,\n\
           \                ),\n            ),\n            prompt=\"OCR the full page\
           \ to markdown.\",\n            timeout=360,\n            response_format=ResponseFormat.MARKDOWN,\n\
-          \            headers={\n                \"Authorization\": f\"Bearer {remote_model_api_key}\"\
+          \            # TODO: remote_model_api_key should be something other than\
+          \ a KFP param (maybe a secret?), so it's not exposed in the UI\n       \
+          \     headers={\n                \"Authorization\": f\"Bearer {remote_model_api_key}\"\
           ,\n            },\n        )\n\n    else:\n        pipeline_options = PdfPipelineOptions()\n\
           \        pipeline_options.artifacts_path = artifacts_path_p\n        pipeline_options.do_ocr\
           \ = True\n        pipeline_options.do_table_structure = True\n        pipeline_options.table_structure_options.do_cell_matching\
@@ -365,8 +418,10 @@ deploymentSpec:
           \ *\n\ndef download_docling_models(\n    output_path: dsl.Output[dsl.Artifact],\n\
           ):\n    \"\"\"\n    Download Docling models.\n\n    Args:\n        output_path:\
           \ Path to the output directory for Docling models.\n    \"\"\"\n    from\
-          \ pathlib import Path\n    from docling.utils.model_downloader import download_models\n\
-          \n    output_path_p = Path(output_path.path)\n\n    output_path_p.mkdir(parents=True,\
+          \ pathlib import Path # pylint: disable=import-outside-toplevel  # noqa:\
+          \ PLC0415, E402\n    from docling.utils.model_downloader import download_models\
+          \ # pylint: disable=import-outside-toplevel  # noqa: PLC0415, E402\n\n \
+          \   output_path_p = Path(output_path.path)\n\n    output_path_p.mkdir(parents=True,\
           \ exist_ok=True)\n\n    download_models(\n        output_dir=output_path_p,\n\
           \        progress=True,\n        with_layout=True,\n        with_tableformer=True,\n\
           \        with_easyocr=True,\n    )\n\n"
@@ -383,8 +438,8 @@ deploymentSpec:
         - -c
         - "\nif ! [ -x \"$(command -v pip)\" ]; then\n    python3 -m ensurepip ||\
           \ python3 -m ensurepip --user || apt-get install python3-pip\nfi\n\nPIP_DISABLE_PIP_VERSION_CHECK=1\
-          \ python3 -m pip install --quiet --no-warn-script-location 'requests'  &&\
-          \  python3 -m pip install --quiet --no-warn-script-location 'kfp==2.14.2'\
+          \ python3 -m pip install --quiet --no-warn-script-location 'boto3' 'requests'\
+          \  &&  python3 -m pip install --quiet --no-warn-script-location 'kfp==2.14.2'\
           \ '--no-deps' 'typing-extensions>=3.7.4,<5; python_version<\"3.9\"' && \"\
           $0\" \"$@\"\n"
         - sh
@@ -398,25 +453,42 @@ deploymentSpec:
 
           '
         - "\nimport kfp\nfrom kfp import dsl\nfrom kfp.dsl import *\nfrom typing import\
-          \ *\n\ndef import_pdfs(\n    pdf_base_url: str,\n    pdf_filenames: str,\n\
-          \    output_path: dsl.Output[dsl.Artifact],\n):\n    \"\"\"\n    Import\
-          \ PDF filenames (comma-separated) from specified base URL.\n\n    Args:\n\
-          \        pdf_base_url: Base URL of the PDF files.\n        pdf_filenames:\
-          \ List of PDF filenames to import.\n        output_path: Path to the output\
-          \ directory for the PDF files.\n    \"\"\"\n    from pathlib import Path\n\
-          \    import requests\n\n    output_path_p = Path(output_path.path)\n   \
-          \ output_path_p.mkdir(parents=True, exist_ok=True)\n\n    if not pdf_base_url:\n\
-          \        raise ValueError(\"base_url must be provided\")\n\n    filenames\
-          \ = [name.strip() for name in pdf_filenames.split(\",\") if name.strip()]\n\
-          \    if not filenames:\n        raise ValueError(\"pdf_filenames must contain\
-          \ at least one filename (comma-separated)\")\n\n    for name in filenames:\n\
-          \        url = f\"{pdf_base_url.rstrip('/')}/{name.lstrip('/')}\"\n    \
-          \    dest = output_path_p / name\n        print(f\"import-test-pdfs: downloading\
-          \ {url} -> {dest}\", flush=True)\n        with requests.get(url, stream=True,\
-          \ timeout=30) as resp:\n            resp.raise_for_status()\n          \
-          \  with dest.open(\"wb\") as f:\n                for chunk in resp.iter_content(chunk_size=8192):\n\
-          \                    if chunk:\n                        f.write(chunk)\n\
-          \    print(\"import-test-pdfs: done\", flush=True)\n\n"
+          \ *\n\ndef import_pdfs(\n    filenames: str,\n    base_url: str,\n    output_path:\
+          \ dsl.Output[dsl.Artifact],\n    from_s3: bool = False,\n    s3_endpoint:\
+          \ str = \"\",\n    s3_access_key: str = \"\",\n    s3_secret_key: str =\
+          \ \"\",\n    s3_bucket: str = \"\",\n    s3_prefix: str = \"\",\n):\n  \
+          \  \"\"\"\n    Import PDF filenames (comma-separated) from specified URL\
+          \ or S3 bucket.\n\n    Args:\n        filenames: List of PDF filenames to\
+          \ import.\n        base_url: Base URL of the PDF files.\n        output_path:\
+          \ Path to the output directory for the PDF files.\n        from_s3: Whether\
+          \ or not to import from S3.\n        s3_endpoint: S3 endpoint of the PDF\
+          \ files.\n        s3_access_key: S3 access key of the PDF files.\n     \
+          \   s3_secret_key: S3 secret key of the PDF files.\n        s3_bucket: S3\
+          \ bucket of the PDF files.\n        s3_prefix: S3 prefix of the PDF files.\n\
+          \    \"\"\"\n    import boto3 # pylint: disable=import-outside-toplevel\
+          \  # noqa: PLC0415, E402\n    from pathlib import Path # pylint: disable=import-outside-toplevel\
+          \  # noqa: PLC0415, E402\n    import requests # pylint: disable=import-outside-toplevel\
+          \  # noqa: PLC0415, E402\n\n    filenames_list = [name.strip() for name\
+          \ in filenames.split(\",\") if name.strip()]\n    if not filenames_list:\n\
+          \        raise ValueError(\"filenames must contain at least one filename\
+          \ (comma-separated)\")\n\n    output_path_p = Path(output_path.path)\n \
+          \   output_path_p.mkdir(parents=True, exist_ok=True)\n\n    if from_s3:\n\
+          \        s3_client = boto3.client(\n            's3',\n            endpoint_url=s3_endpoint,\n\
+          \            aws_access_key_id=s3_access_key,\n            aws_secret_access_key=s3_secret_key,\n\
+          \        )\n\n        for filename in filenames_list:\n            orig\
+          \ = s3_prefix + \"/\" + filename\n            dest = output_path_p / filename\n\
+          \            print(f\"import-test-pdfs: downloading {orig} -> {dest} from\
+          \ s3\", flush=True)\n            s3_client.download_file(s3_bucket, orig,\
+          \ dest)\n    else:\n        if not base_url:\n            raise ValueError(\"\
+          base_url must be provided\")\n\n        for filename in filenames_list:\n\
+          \            url = f\"{base_url.rstrip('/')}/{filename.lstrip('/')}\"\n\
+          \            dest = output_path_p / filename\n            print(f\"import-test-pdfs:\
+          \ downloading {url} -> {dest}\", flush=True)\n            with requests.get(url,\
+          \ stream=True, timeout=30) as resp:\n                resp.raise_for_status()\n\
+          \                with dest.open(\"wb\") as f:\n                    for chunk\
+          \ in resp.iter_content(chunk_size=8192):\n                        if chunk:\n\
+          \                            f.write(chunk)\n\n    print(\"import-test-pdfs:\
+          \ done\", flush=True)\n\n"
         image: registry.access.redhat.com/ubi9/python-311:9.6-1755074620
 pipelineInfo:
   description: Docling convert pipeline by the Data Processing Team
@@ -500,10 +572,22 @@ root:
           name: comp-import-pdfs
         inputs:
           parameters:
-            pdf_base_url:
+            base_url:
               componentInputParameter: pdf_base_url
-            pdf_filenames:
+            filenames:
               componentInputParameter: pdf_filenames
+            from_s3:
+              componentInputParameter: pdf_from_s3
+            s3_access_key:
+              componentInputParameter: pdf_s3_access_key
+            s3_bucket:
+              componentInputParameter: pdf_s3_bucket
+            s3_endpoint:
+              componentInputParameter: pdf_s3_endpoint
+            s3_prefix:
+              componentInputParameter: pdf_s3_prefix
+            s3_secret_key:
+              componentInputParameter: pdf_s3_secret_key
         taskInfo:
           name: import-pdfs
   inputDefinitions:
@@ -554,6 +638,30 @@ root:
         parameterType: STRING
       pdf_filenames:
         defaultValue: 2203.01017v2.pdf,2206.01062.pdf,2305.03393v1-pg9.pdf,2305.03393v1.pdf,amt_handbook_sample.pdf,code_and_formula.pdf,multi_page.pdf,redp5110_sampled.pdf
+        isOptional: true
+        parameterType: STRING
+      pdf_from_s3:
+        defaultValue: false
+        isOptional: true
+        parameterType: BOOLEAN
+      pdf_s3_access_key:
+        defaultValue: REDACTED
+        isOptional: true
+        parameterType: STRING
+      pdf_s3_bucket:
+        defaultValue: my-bucket
+        isOptional: true
+        parameterType: STRING
+      pdf_s3_endpoint:
+        defaultValue: https://s3.us-east-2.amazonaws.com
+        isOptional: true
+        parameterType: STRING
+      pdf_s3_prefix:
+        defaultValue: my-pdfs
+        isOptional: true
+        parameterType: STRING
+      pdf_s3_secret_key:
+        defaultValue: REDACTED
         isOptional: true
         parameterType: STRING
 schemaVersion: 2.1.0
