--- a/docling_convert_pipeline_compiled.yaml
+++ b/docling_convert_pipeline_compiled.yaml
@@ -68,7 +68,7 @@ components:
           description: Backend to use for PDF processing.
           isOptional: true
           parameterType: STRING
-        pdf_split:
+        pdf_filenames:
           description: List of PDF file names to process.
           parameterType: LIST
         remote_model_api_key:
@@ -97,7 +97,7 @@ components:
           isOptional: true
           parameterType: STRING
         timeout_per_document:
-          defaultValue: 0.0
+          defaultValue: 300.0
           description: Timeout per document processing.
           isOptional: true
           parameterType: NUMBER_INTEGER
@@ -135,7 +135,7 @@ components:
                 componentInputParameter: pipelinechannel--docling_num_threads
               pdf_backend:
                 componentInputParameter: pipelinechannel--docling_pdf_backend
-              pdf_split:
+              pdf_filenames:
                 componentInputParameter: pipelinechannel--create-pdf-splits-Output-loop-item
               remote_model_api_key:
                 componentInputParameter: pipelinechannel--docling_remote_model_api_key
@@ -295,49 +295,59 @@ deploymentSpec:
         - "\nimport kfp\nfrom kfp import dsl\nfrom kfp.dsl import *\nfrom typing import\
           \ *\n\ndef docling_convert(\n    input_path: dsl.Input[dsl.Artifact],\n\
           \    artifacts_path: dsl.Input[dsl.Artifact],\n    output_path: dsl.Output[dsl.Artifact],\n\
-          \    pdf_split: List[str],\n    pdf_backend: str = \"dlparse_v4\",\n   \
-          \ image_export_mode: str = \"embedded\",\n    table_mode: str = \"accurate\"\
-          ,\n    num_threads: int = 4,\n    timeout_per_document: int = 0,\n    remote_model_enabled:\
-          \ bool = False,\n    remote_model_endpoint_url: str = \"\",\n    remote_model_api_key:\
-          \ str = \"\",\n    remote_model_name: str = \"\",\n):\n    \"\"\"\n    Convert\
-          \ a list of PDF files to JSON and Markdown using Docling.\n\n    Args:\n\
-          \        input_path: Path to the input directory containing PDF files.\n\
-          \        artifacts_path: Path to the directory containing Docling models.\n\
-          \        output_path: Path to the output directory for converted JSON and\
-          \ Markdown files.\n        pdf_split: List of PDF file names to process.\n\
-          \        pdf_backend: Backend to use for PDF processing.\n        image_export_mode:\
-          \ Mode to export images.\n        table_mode: Mode to detect tables.\n \
-          \       num_threads: Number of threads to use per document processing.\n\
-          \        timeout_per_document: Timeout per document processing.\n      \
-          \  remote_model_enabled: Whether or not to use a remote model.\n       \
-          \ remote_model_endpoint_url: URL of the remote model.\n        remote_model_api_key:\
-          \ API key or token for the remote model.\n        remote_model_name: Name\
-          \ of the remote model.\n    \"\"\"\n    import os\n    from importlib import\
-          \ import_module\n    from pathlib import Path\n\n    from docling_core.types.doc.base\
-          \ import ImageRefMode  # pylint: disable=import-outside-toplevel  # noqa:\
-          \ PLC0415, E402\n    from docling.datamodel.base_models import InputFormat\
-          \  # pylint: disable=import-outside-toplevel  # noqa: PLC0415, E402\n  \
-          \  from docling.datamodel.pipeline_options import (  # pylint: disable=import-outside-toplevel\
-          \  # noqa: PLC0415, E402\n        PdfPipelineOptions,\n        PdfBackend,\n\
-          \        TableFormerMode,\n        VlmPipelineOptions,\n    )\n    from\
-          \ docling.document_converter import DocumentConverter, PdfFormatOption \
-          \ # pylint: disable=import-outside-toplevel  # noqa: PLC0415, E402\n   \
-          \ from docling.datamodel.accelerator_options import AcceleratorDevice, AcceleratorOptions\
-          \  # pylint: disable=import-outside-toplevel  # noqa: PLC0415, E402\n  \
-          \  from docling.datamodel.pipeline_options_vlm_model import ApiVlmOptions,\
-          \ ResponseFormat # pylint: disable=import-outside-toplevel  # noqa: PLC0415,\
-          \ E402\n    from docling.pipeline.vlm_pipeline import VlmPipeline # pylint:\
-          \ disable=import-outside-toplevel  # noqa: PLC0415, E402\n    from docling.pipeline.standard_pdf_pipeline\
-          \ import StandardPdfPipeline # pylint: disable=import-outside-toplevel \
-          \ # noqa: PLC0415, E402\n\n    allowed_backends = {e.value for e in PdfBackend}\n\
-          \    if pdf_backend not in allowed_backends:\n        raise ValueError(\n\
-          \            f\"Invalid pdf_backend: {pdf_backend}. Must be one of {sorted(allowed_backends)}\"\
-          \n        )\n\n    input_path_p = Path(input_path.path)\n    artifacts_path_p\
-          \ = Path(artifacts_path.path)\n    output_path_p = Path(output_path.path)\n\
-          \    output_path_p.mkdir(parents=True, exist_ok=True)\n\n    input_pdfs\
-          \ = [input_path_p / name for name in pdf_split]\n    print(f\"docling-convert:\
-          \ starting with backend='{pdf_backend}', files={len(input_pdfs)}\", flush=True)\n\
-          \n    if remote_model_enabled:\n        pipeline_options = VlmPipelineOptions(\n\
+          \    pdf_filenames: List[str],\n    pdf_backend: str = \"dlparse_v4\",\n\
+          \    image_export_mode: str = \"embedded\",\n    table_mode: str = \"accurate\"\
+          ,\n    num_threads: int = 4,\n    timeout_per_document: int = 300,\n   \
+          \ remote_model_enabled: bool = False,\n    remote_model_endpoint_url: str\
+          \ = \"\",\n    remote_model_api_key: str = \"\",\n    remote_model_name:\
+          \ str = \"\",\n):\n    \"\"\"\n    Convert a list of PDF files to JSON and\
+          \ Markdown using Docling.\n\n    Args:\n        input_path: Path to the\
+          \ input directory containing PDF files.\n        artifacts_path: Path to\
+          \ the directory containing Docling models.\n        output_path: Path to\
+          \ the output directory for converted JSON and Markdown files.\n        pdf_filenames:\
+          \ List of PDF file names to process.\n        pdf_backend: Backend to use\
+          \ for PDF processing.\n        image_export_mode: Mode to export images.\n\
+          \        table_mode: Mode to detect tables.\n        num_threads: Number\
+          \ of threads to use per document processing.\n        timeout_per_document:\
+          \ Timeout per document processing.\n        remote_model_enabled: Whether\
+          \ or not to use a remote model.\n        remote_model_endpoint_url: URL\
+          \ of the remote model.\n        remote_model_api_key: API key or token for\
+          \ the remote model.\n        remote_model_name: Name of the remote model.\n\
+          \    \"\"\"\n    import os\n    from importlib import import_module\n  \
+          \  from pathlib import Path\n\n    from docling_core.types.doc.base import\
+          \ ImageRefMode  # pylint: disable=import-outside-toplevel  # noqa: PLC0415,\
+          \ E402\n    from docling.datamodel.base_models import InputFormat  # pylint:\
+          \ disable=import-outside-toplevel  # noqa: PLC0415, E402\n    from docling.datamodel.pipeline_options\
+          \ import (  # pylint: disable=import-outside-toplevel  # noqa: PLC0415,\
+          \ E402\n        PdfPipelineOptions,\n        PdfBackend,\n        TableFormerMode,\n\
+          \        VlmPipelineOptions,\n    )\n    from docling.document_converter\
+          \ import DocumentConverter, PdfFormatOption  # pylint: disable=import-outside-toplevel\
+          \  # noqa: PLC0415, E402\n    from docling.datamodel.accelerator_options\
+          \ import AcceleratorDevice, AcceleratorOptions  # pylint: disable=import-outside-toplevel\
+          \  # noqa: PLC0415, E402\n    from docling.datamodel.pipeline_options_vlm_model\
+          \ import ApiVlmOptions, ResponseFormat # pylint: disable=import-outside-toplevel\
+          \  # noqa: PLC0415, E402\n    from docling.pipeline.vlm_pipeline import\
+          \ VlmPipeline # pylint: disable=import-outside-toplevel  # noqa: PLC0415,\
+          \ E402\n    from docling.pipeline.standard_pdf_pipeline import StandardPdfPipeline\
+          \ # pylint: disable=import-outside-toplevel  # noqa: PLC0415, E402\n\n \
+          \   if not pdf_filenames:\n        raise ValueError(\"pdf_filenames must\
+          \ be provided with the list of file names to process\")\n\n    allowed_pdf_backends\
+          \ = {e.value for e in PdfBackend}\n    if pdf_backend not in allowed_pdf_backends:\n\
+          \        raise ValueError(\n            f\"Invalid pdf_backend: {pdf_backend}.\
+          \ Must be one of {sorted(allowed_pdf_backends)}\"\n        )\n\n    allowed_table_modes\
+          \ = {e.value for e in TableFormerMode}\n    if table_mode not in allowed_table_modes:\n\
+          \        raise ValueError(\n            f\"Invalid table_mode: {table_mode}.\
+          \ Must be one of {sorted(allowed_table_modes)}\"\n        )\n\n    allowed_image_export_modes\
+          \ = {e.value for e in ImageRefMode}\n    if image_export_mode not in allowed_image_export_modes:\n\
+          \        raise ValueError(\n            f\"Invalid image_export_mode: {image_export_mode}.\
+          \ Must be one of {sorted(allowed_image_export_modes)}\"\n        )\n\n \
+          \   input_path_p = Path(input_path.path)\n    artifacts_path_p = Path(artifacts_path.path)\n\
+          \    output_path_p = Path(output_path.path)\n    output_path_p.mkdir(parents=True,\
+          \ exist_ok=True)\n\n    input_pdfs = [input_path_p / name for name in pdf_filenames]\n\
+          \    print(f\"docling-convert: starting with backend='{pdf_backend}', files={len(input_pdfs)}\"\
+          , flush=True)\n\n    if remote_model_enabled:\n        if not remote_model_endpoint_url:\n\
+          \            raise ValueError(\"remote_model_endpoint_url must be provided\
+          \ when remote_model_enabled is True\")\n\n        pipeline_options = VlmPipelineOptions(\n\
           \            enable_remote_services=True,\n        )\n        pipeline_options.vlm_options\
           \ = ApiVlmOptions(\n            url=remote_model_endpoint_url, # type: ignore[arg-type]\n\
           \            params=dict(\n                model_id=remote_model_name,\n\
@@ -453,13 +463,13 @@ deploymentSpec:
 
           '
         - "\nimport kfp\nfrom kfp import dsl\nfrom kfp.dsl import *\nfrom typing import\
-          \ *\n\ndef import_pdfs(\n    filenames: str,\n    base_url: str,\n    output_path:\
-          \ dsl.Output[dsl.Artifact],\n    from_s3: bool = False,\n    s3_endpoint:\
-          \ str = \"\",\n    s3_access_key: str = \"\",\n    s3_secret_key: str =\
-          \ \"\",\n    s3_bucket: str = \"\",\n    s3_prefix: str = \"\",\n):\n  \
-          \  \"\"\"\n    Import PDF filenames (comma-separated) from specified URL\
-          \ or S3 bucket.\n\n    Args:\n        filenames: List of PDF filenames to\
-          \ import.\n        base_url: Base URL of the PDF files.\n        output_path:\
+          \ *\n\ndef import_pdfs(\n    output_path: dsl.Output[dsl.Artifact],\n  \
+          \  filenames: str,\n    base_url: str,\n    from_s3: bool = False,\n   \
+          \ s3_endpoint: str = \"\",\n    s3_access_key: str = \"\",\n    s3_secret_key:\
+          \ str = \"\",\n    s3_bucket: str = \"\",\n    s3_prefix: str = \"\",\n\
+          ):\n    \"\"\"\n    Import PDF filenames (comma-separated) from specified\
+          \ URL or S3 bucket.\n\n    Args:\n        filenames: List of PDF filenames\
+          \ to import.\n        base_url: Base URL of the PDF files.\n        output_path:\
           \ Path to the output directory for the PDF files.\n        from_s3: Whether\
           \ or not to import from S3.\n        s3_endpoint: S3 endpoint of the PDF\
           \ files.\n        s3_access_key: S3 access key of the PDF files.\n     \
@@ -473,13 +483,15 @@ deploymentSpec:
           \        raise ValueError(\"filenames must contain at least one filename\
           \ (comma-separated)\")\n\n    output_path_p = Path(output_path.path)\n \
           \   output_path_p.mkdir(parents=True, exist_ok=True)\n\n    if from_s3:\n\
-          \        s3_client = boto3.client(\n            's3',\n            endpoint_url=s3_endpoint,\n\
-          \            aws_access_key_id=s3_access_key,\n            aws_secret_access_key=s3_secret_key,\n\
-          \        )\n\n        for filename in filenames_list:\n            orig\
-          \ = s3_prefix + \"/\" + filename\n            dest = output_path_p / filename\n\
-          \            print(f\"import-test-pdfs: downloading {orig} -> {dest} from\
-          \ s3\", flush=True)\n            s3_client.download_file(s3_bucket, orig,\
-          \ dest)\n    else:\n        if not base_url:\n            raise ValueError(\"\
+          \        if not s3_endpoint:\n            raise ValueError(\"s3_endpoint\
+          \ must be provided\")\n\n        if not s3_bucket:\n            raise ValueError(\"\
+          s3_bucket must be provided\")\n\n        s3_client = boto3.client(\n   \
+          \         's3',\n            endpoint_url=s3_endpoint,\n            aws_access_key_id=s3_access_key,\n\
+          \            aws_secret_access_key=s3_secret_key,\n        )\n\n       \
+          \ for filename in filenames_list:\n            orig = f\"{s3_prefix.rstrip('/')}/{filename.lstrip('/')}\"\
+          \n            dest = output_path_p / filename\n            print(f\"import-test-pdfs:\
+          \ downloading {orig} -> {dest} from s3\", flush=True)\n            s3_client.download_file(s3_bucket,\
+          \ orig, dest)\n    else:\n        if not base_url:\n            raise ValueError(\"\
           base_url must be provided\")\n\n        for filename in filenames_list:\n\
           \            url = f\"{base_url.rstrip('/')}/{filename.lstrip('/')}\"\n\
           \            dest = output_path_p / filename\n            print(f\"import-test-pdfs:\
